--- a/PNC-09-29.md
+++ b/PNC-09-29.md
@@ -1,4 +1,6 @@
-# PNC App Modernization Workshop – Kubernetes/OpenShift - Sept 29-30, 2020
+# PNC App Modernization Workshop – Kubernetes/OpenShift
+
+## -- Sept 29-30, 2020
 
 ## Hands-on Labs
 
