--- a/PNC-09-29.md
+++ b/PNC-09-29.md
@@ -7,23 +7,23 @@
 * [Lab environment setup](http://ibm.biz/skills-network)
    - http://ibm.biz/skills-network
 
-* [Container 101](https://github.com/IBM/docker101/blob/master/workshop/README.md)
+* [Lab - Container 101](https://github.com/IBM/docker101/blob/master/workshop/README.md)
    - http://ibm.biz/container101
 
-* [Kubernetes 101](https://github.com/IBM/kube101/tree/oc-cli)
+* [Lab - Kubernetes 101](https://github.com/IBM/kube101/tree/oc-cli)
    - http://ibm.biz/k8s-101-oc
 
-* [Helm 101](https://github.com/IBMAppModernization/helm101/tree/master/tutorial)
+* [Lab - Helm 101](https://github.com/IBMAppModernization/helm101/tree/master/tutorial)
    - http://ibm.biz/helm101-lab
 
-* [Source To Image](https://github.com/IBM/s2i-open-liberty-workshop)
+* [Lab - Source To Image](https://github.com/IBM/s2i-open-liberty-workshop)
    - http://ibm.biz/s2i-lab
 
-* CI/CD with Jenkins on OpenShift
+* Lab - CI/CD with Jenkins on OpenShift
    - http://ibm.biz/lab-s2i-template
    - http://ibm.biz/lab-jenkins-openshift-internal
 
-* [Kafka 101](https://github.com/lee-zhg/kafka101) 
+* [Lab - Kafka 101](https://github.com/lee-zhg/kafka101) 
    - http://ibm.biz/kafka101
 
 
